[package]
name = "pronto"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "1.1.0"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0"
prettytable-rs = "^0.8"
console = "0.15.0"
chrono = "0.4"
